# quadnet

./: .gitignore  README.md  meson.build
.github/workflows/: test.yaml
src/: main.cpp  main.test.cpp  meson.build  random.hpp  random.test.cpp
